# notes-app

./: .gitignore  README.md  compose.yaml  docker-compose.yaml
.github/workflows/: rust.yml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yaml  sqlx-data.json
backend/configuration/: base.yaml  configuration.yaml  local.yaml  production.yaml
backend/migrations/: 20240531172401_create_notes_table.sql  20240910214002_change_tab_datatype_to_array_of_strings.sql
backend/src/: configuration.rs  configuration.yaml  lib.rs  main.rs  startup.rs  telemetry.rs
backend/src/routes/: mod.rs  notes.rs
backend/tests/: health_check.rs
backend/tests/api/: health_check.rs  helpers.rs  main.rs  notes.rs
docker-entrypoint-initdb.d/: init_db.sh
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.js  theme.js
frontend/src/Components/: AddNoteButton.js  ArchiveButton.js  Body.js  CreateNoteBox.js  CreateNoteBoxExpanded.js  CreateNoteBoxSmall.js  DarkModeSwitch.js  DeleteNoteButton.js  EditPanel.js  Header.js  HeaderBar.js  ListItemDrawer.js  MainMenuDrawer.js  MainUI.js  Note.js  NoteCard.js  NoteCardContainer.js  NoteContainer.js  NoteList.js  NotePreview.js  NotesBox.js  SearchBar.js  Tag.js  TagBox.js  TagContainer.js  TagsBox.js  UnarchivePanel.js
frontend/src/Components/css/: App.css  EditPanel.css  Note.css  NoteList.css  Style.css
frontend/src/components/: EditNote.tsx  Header.tsx  NoteComponent.tsx  NoteList.tsx  UserInterface.tsx
frontend/src/components/css/: app.css  note.module.css
frontend/src/css/: app.css
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/styles/: AddNoteButtonStyle.js  AppStyle.js  EditPanelStyle.js  NoteStyle.js
frontend/src/themes/: darkTheme.js  lightTheme.js
migrations/: 20240630102019_add_archive_status_to_notes.sql  20240630115143_change_archive_column_name.sql  20240910201148_remove_not_null_requirement.sql  20240910201613_remove_not_null_requirement_for_created_at.sql  20240915155050_change_name_of_tab_column_to_tabs.sql
