[package]
name = "backend"
version = "0.1.0"
authors = ["Joseph Patton <josephpatton@outlook.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
log = "0.4.21"
env_logger = "0.11.3"
tracing-futures = "0.2.5"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2.0"
tracing-actix-web = "0.7.10"
serde-aux = "4.5.0"
actix-cors = "0.7.0"

[dev-dependencies]
reqwest = "0.11"
actix-rt = "2"
once_cell = "1.19.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",

]
