[package]
name = "backend"
version = "0.1.0"
authors = ["Joseph Patton <josephpatton@outlook.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
uuid = { version = "0.8.1", features = ["v4", "serde"] }
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14.0"
chrono = { version = "0.4.1", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
log = "0.4.21"
env_logger = "0.11.3"
tracing-futures = "0.2.5"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2.0"
tracing-actix-web = "0.7.10"
serde-aux = "4.5.0"
actix-cors = "0.7.0"
serde_with = "3.8.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
actix-rt = "2"
once_cell = "1.19.0"
claim = "0.5.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",

]
